force-app/main/default/objects/Exam__c/fields/Current_date_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Current_date_checkbox__c</fullName>
    <description>Current date checkbox in Exam object</description>
    <formula>AND(TODAY()&gt;= Exam_Start_Date__c, TODAY()&lt;= Exam_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current date within exam dates</label>
    <type>Checkbox</type>
</CustomField>