force-app/main/default/objects/Exam__c/fields/Doesn_t_expire__c.field-meta.xml
<CustomField>
    <fullName>Doesn_t_expire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Doesn&apos;t expire checkbox on object Exam</description>
    <label>Doesn&apos;t expire?</label>
    <type>Checkbox</type>
</CustomField>