force-app/main/default/objects/Exam__c/fields/Exam_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_End_Date__c</fullName>
    <description>Indicates Exam End Date field on object Exam</description>
    <label>Exam End Date</label>
    <type>Date</type>
</CustomField>