force-app/main/default/objects/Exam__c/fields/Exam_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Indicates Exam start date field in Exam object</description>
    <label>Exam Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>