force-app/main/default/objects/Exam__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Published?</label>
    <type>Checkbox</type>
</CustomField>