force-app/main/default/objects/Exam__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Indicates Exam start date field in Exam object</description>
    <label>Exam Start Date</label>
    <type>Date</type>
</CustomField>