force-app/main/default/objects/Exam__c/validationRules/Exam_current_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_current_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	NOT(
	    AND(Exam_Start_Date__c&gt;=today(),Exam_End_Date__c&gt;=Exam_Start_Date__c)
	   ),
	NOT(and(Exam_Start_Date__c&lt;=today(),Exam_End_Date__c&gt;=Exam_Start_Date__c,Exam_End_Date__c&lt;=today())
	   )
  )</errorConditionFormula>
    <errorMessage>Current date cannot be within the examination period.</errorMessage>
</ValidationRule>